--- a/package.json
+++ b/package.json
@@ -1,20 +1,21 @@
 {
-  "name": "github-search",
+  "name": "github-issues",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^5.14.1",
-    "@testing-library/react": "^12.0.0",
-    "@testing-library/user-event": "^13.2.1",
-    "@types/jest": "^27.0.1",
+    "@types/axios": "^0.14.0",
     "@types/node": "^16.7.13",
     "@types/react": "^17.0.20",
     "@types/react-dom": "^17.0.9",
+    "@types/styled-components": "^5.1.19",
+    "axios": "^0.24.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-query": "^3.34.7",
+    "react-router": "^6.2.1",
     "react-scripts": "5.0.0",
-    "typescript": "^4.4.2",
-    "web-vitals": "^2.1.0"
+    "styled-components": "^5.3.3",
+    "typescript": "^4.4.2"
   },
   "scripts": {
     "start": "react-scripts start",
